[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.template"
dynamic = ["version"]
description = "A lightweight template library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" },
]
keywords = ["html", "markup", "template", "preprocessor"]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Widget Sets",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = []

[project.optional-dependencies]
cython = ["Cython>=3.0"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.template"
Source = "https://github.com/akornatskyy/wheezy.template"
Issues = "https://github.com/akornatskyy/wheezy.template/issues"

[project.scripts]
"wheezy.template" = "wheezy.template.console:main"

[tool.setuptools]
packages = ["wheezy.template", "wheezy.template.ext"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"wheezy.template" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.template.__version__" }

[tool.coverage.run]
source = [
  "src/wheezy/template",
]
omit = [
  "*/test_*.py",
  "*/tests/*",
]
